--- a/stylenew.css
+++ b/stylenew.css
@@ -2,6 +2,11 @@ body {
     background-color:mintcream
 }
 
+.image {
+    width:100%;
+    height:100%;
+}
+
 #card::first-letter {
     float: left;
     line-height: 35px;
